--- a/src/components/PhotoGrid.css
+++ b/src/components/PhotoGrid.css
@@ -1,74 +1,82 @@
-.photoGrid {
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.photoGrid a {
+.imageGridItem {
     display: inline-block;
-    margin-bottom: 10px;
-    margin-right: calc(10%);
-    text-decoration: none;
-    color: black;
-}
-.photoGrid a:hover img {
-    transform: scale(1.15);
-}
-
-.photoGrid figure {
-    margin: 0;
-}
-
-.photoGrid a img {
-    border: none;
-    max-width: 100%;
-    min-width: 100%;
-    height: auto;
-    display: block;
-    background: #ccc;
-    transition: transform .2s ease-in-out;
-}
-
-.column1 a {
-    width: calc(100%);
-}
-.column1 figure {
+    box-sizing: border-box;
     float: left;
-    margin-right: 20px;
-    width:30%;
-}
-
-.column2 a {
-    width: calc(50% - 10%);
-}
-.column2 a:nth-of-type(2n) {
-    margin-right: 0px;
-}
-.column2 figure,  .column3 figure, .column5 figure {
-    float: none;
+    padding: 10px;
     overflow: hidden;
-    margin: 0;
+    position: relative;
+    transition: all .5s linear;
+    transition-delay: .1s;
 }
-.column2 figcaption,  .column3 figcaption, .column5 figcaption {
-    margin-top: 15px;
+.imageWrapper {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    transition: all .5s linear;
+
+    cursor: pointer;
+    /*box-shadow: 0 10px 6px -6px #777;*/
+    box-shadow:0 10px 6px -6px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
-
-
-.column3 a {
-    width: calc(33% - 10%);
-    /*margin-right: 30px;*/
-
-}
-.column3 a:nth-of-type(3n) {
-    margin-right: 0px;
-}
-
-.column5 a {
-    width: calc(20% - 5%);
-    margin-right: calc(5%);
-
-}
-.column5 a:nth-of-type(5n) {
-    margin-right: 0px;
+.imageGridItem:hover .imageWrapper{
+    background-position: right;
 }
 
+.column1 {
+    width: 100%;
+    transition: all .5s linear;
+}
+.column1Image {
+    float:left;
+    width:30%;
+    margin-right: 10px;
+    padding-bottom: 30%;
+    transition: all .5s linear;
+}
 
+
+.lightbox {
+    /** Default lightbox to hidden */
+    /*display: block;*/
+    opacity: 1;
+    /** Position and style */
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.8);
+    visibility: visible;
+    /*transition: visibility .3s, opacity .3s linear;*/
+    transition: all .5s ;
+
+}
+
+.lightbox img {
+    /** Pad the lightbox image */
+    max-width: 90%;
+    max-height: 100%;
+    height:100%;
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    /*padding: 10px;*/
+}
+
+/*.lightbox:target {*/
+    /*!** Remove default browser outline *!*/
+    /*outline: none;*/
+    /*!** Unhide lightbox **!*/
+    /*display: block;*/
+/*}*/
+.hide {
+     /*display:none;*/
+     opacity: 0;
+    visibility: hidden;
+    transition: visibility .3s, opacity .3s linear;
+    /*transition: all .5s;*/
+
+}
