--- a/src/components/PhotoGrid.css
+++ b/src/components/PhotoGrid.css
@@ -18,7 +18,6 @@
     transition: all .5s linear;
 
     cursor: pointer;
-    /*box-shadow: 0 10px 6px -6px #777;*/
     box-shadow:0 10px 6px -6px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
 }
 .imageGridItem:hover .imageWrapper{
@@ -50,28 +49,25 @@
     text-align: center;
     top: 0;
     left: 0;
-    background: rgba(0,0,0,0.8);
+    background: rgba(0,0,0,0.88);
     visibility: visible;
     /*transition: visibility .3s, opacity .3s linear;*/
     transition: all .5s ;
-
 }
 
 .lightbox img {
     /** Pad the lightbox image */
-    max-width: 90%;
+    max-width: 100%;
     max-height: 100%;
-    height:100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
     box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
     /*padding: 10px;*/
 }
 
-/*.lightbox:target {*/
-    /*!** Remove default browser outline *!*/
-    /*outline: none;*/
-    /*!** Unhide lightbox **!*/
-    /*display: block;*/
-/*}*/
 .hide {
      /*display:none;*/
      opacity: 0;
