--- a/src/components/PhotoGrid.css
+++ b/src/components/PhotoGrid.css
@@ -24,6 +24,40 @@
     background-position: right;
 }
 
+.imageGridItem a {
+    display: none;
+    font-size: 100%;
+    color: #ffffff !important;
+    text-align: center;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 50px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.imageGridItem:hover a, .imageGridItem:focus a {
+    display: block;
+}
+
+.imageGridItem:hover .imageWrapper:before, .imageGridItem:focus .imageWrapper:before {
+    display: block;
+}
+
+.imageWrapper:before {
+    content: "";
+    display: none;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(29, 38, 41, 0.65);
+}
 .column1 {
     width: 100%;
     transition: all .5s linear;
@@ -66,6 +100,23 @@
     transform: translate(-50%, -50%);
     box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
     /*padding: 10px;*/
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+    opacity:0;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    pointer-events:none;
+
+}
+
+.lightbox img:global(.opaque) {
+    opacity:1;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=1);
+    pointer-events: auto;
+
 }
 
 .hide {
