--- a/static/styles.css
+++ b/static/styles.css
@@ -1,1 +1,199 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);.PhotoGrid__imageGridItem___hFxCm{display:inline-block;box-sizing:border-box;float:left;padding:10px;overflow:hidden;position:relative;transition:all .5s linear;transition-delay:.1s}.PhotoGrid__imageWrapper___1YTK9{position:relative;width:100%;padding-bottom:100%;background-size:cover;background-position:50%;background-repeat:no-repeat;transition:all .5s linear;cursor:pointer;box-shadow:0 10px 6px -6px rgba(0,0,0,.3),inset 0 0 40px rgba(0,0,0,.1)}.PhotoGrid__imageGridItem___hFxCm:hover .PhotoGrid__imageWrapper___1YTK9{background-position:100%}.PhotoGrid__column1___3xTvr{width:100%;transition:all .5s linear}.PhotoGrid__column1Image___2KDMR{float:left;width:30%;margin-right:10px;padding-bottom:30%;transition:all .5s linear}.PhotoGrid__lightbox___2hnqF{opacity:1;position:fixed;z-index:999;width:100%;height:100%;text-align:center;top:0;left:0;background:rgba(0,0,0,.88);visibility:visible;transition:all .5s}.PhotoGrid__lightbox___2hnqF img{max-width:100%;max-height:100%;position:absolute;top:50%;left:50%;margin-right:-50%;transform:translate(-50%,-50%);box-shadow:0 1px 4px rgba(0,0,0,.3),inset 0 0 40px rgba(0,0,0,.1)}.PhotoGrid__hide___3-4dl{opacity:0;visibility:hidden;transition:visibility .3s,opacity .3s linear}.DefaultInfoElement__info___OKuK5{transition:all 5s;transition-delay:2s}.RadioButtonGroup__buttons___38Ovq{margin:0 auto;width:100%;display:inline}.RadioButtonGroup__buttons___38Ovq a{margin:10px;box-shadow:0 1px 4px rgba(0,0,0,.3),inset 0 0 40px rgba(0,0,0,.1);transition:all .45s cubic-bezier(.23,1,.32,1) 0ms}.RadioButtonGroup__buttons___38Ovq a:link,.RadioButtonGroup__buttons___38Ovq a:visited{background-color:#fff;color:#000;padding:10px 20px;text-align:center;text-decoration:none;display:inline-block;border-radius:2px}.RadioButtonGroup__buttons___38Ovq a:active,.RadioButtonGroup__buttons___38Ovq a:hover{background-color:rgba(0,0,0,.078);box-shadow:0 10px 6px -6px rgba(0,0,0,.3),inset 0 0 40px rgba(0,0,0,.1)}.RadioButtonGroup__secondaryButton___2g6PC a:link,.RadioButtonGroup__secondaryButton___2g6PC a:visited{background-color:#00bcd4;color:#fff}.RadioButtonGroup__secondaryButton___2g6PC a:active,.RadioButtonGroup__secondaryButton___2g6PC a:hover{background-color:#00a1b7;box-shadow:0 10px 6px -6px rgba(0,0,0,.3),inset 0 0 40px rgba(0,0,0,.1)}.RadioButtonGroup__defaultButton___V_J7Q a:active,.RadioButtonGroup__defaultButton___V_J7Q a:hover{background-color:rgba(0,0,0,.078);box-shadow:0 10px 6px -6px rgba(0,0,0,.3),inset 0 0 40px rgba(0,0,0,.1)}.RadioButtonGroup__defaultButtonSelected___3Ds5j{background-color:rgba(0,0,0,.2)!important}.RadioButtonGroup__secondaryButtonSelected___Bayht{background-color:#008ba1!important}h1 small{font-size:65%;color:#777;font-weight:400}html{font-family:Roboto,sans-serif;-webkit-font-smoothing:antialiased}body{width:80%;margin:30px auto}
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,500);html {
+    font-family: 'Roboto', sans-serif;
+    -webkit-font-smoothing: antialiased;
+}
+body {
+    width: 80%;
+    margin: 30px auto;
+}.RadioButtonGroup__buttons___38Ovq {
+    margin: 0 auto;
+    width: 100%;
+    display:inline;
+}
+
+
+
+.RadioButtonGroup__buttons___38Ovq a {
+    margin: 10px;
+    /*box-shadow:0 0 10px rgba(0, 0, 0, 0.5);;*/
+    box-shadow: 0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    transition: all 450ms cubic-bezier(0.23, 1, 0.32, 1) 0ms;
+}
+
+.RadioButtonGroup__buttons___38Ovq a:link, .RadioButtonGroup__buttons___38Ovq a:visited {
+    background-color: white;
+    color: black;
+    /*border: 2px solid green;*/
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    border-radius: 2px;
+}
+
+.RadioButtonGroup__buttons___38Ovq a:hover, .RadioButtonGroup__buttons___38Ovq a:active {
+    background-color: rgba(0, 0, 0, 0.078);
+    box-shadow:0 10px 6px -6px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+
+    /*color: white;*/
+}
+
+.RadioButtonGroup__secondaryButton___2g6PC a:link, .RadioButtonGroup__secondaryButton___2g6PC a:visited {
+    background-color: #00bcd4;
+    color: white
+}
+
+.RadioButtonGroup__secondaryButton___2g6PC a:hover, .RadioButtonGroup__secondaryButton___2g6PC a:active {
+    background-color: rgb(0, 161, 183);
+    box-shadow:0 10px 6px -6px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset ;
+}
+
+.RadioButtonGroup__defaultButton___V_J7Q a:hover, .RadioButtonGroup__defaultButton___V_J7Q a:active {
+    background-color: rgba(0, 0, 0, 0.078) ;
+    box-shadow:0 10px 6px -6px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.RadioButtonGroup__defaultButtonSelected___3Ds5j {
+    background-color: rgba(0, 0, 0, 0.2) !important;
+
+}
+.RadioButtonGroup__secondaryButtonSelected___Bayht {
+    background-color: rgb(0, 139, 161) !important;
+
+}
+.DefaultInfoElement__info___OKuK5 {
+    transition: all 5s;
+    transition-delay: 2s;
+}.PhotoGrid__imageGridItem___hFxCm {
+    display: inline-block;
+    box-sizing: border-box;
+    float: left;
+    padding: 10px;
+    overflow: hidden;
+    position: relative;
+    transition: all .5s linear;
+    transition-delay: .1s;
+}
+.PhotoGrid__imageWrapper___1YTK9 {
+    position: relative;
+    width: 100%;
+    padding-bottom: 100%;
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+    transition: all .5s linear;
+
+    cursor: pointer;
+    box-shadow:0 10px 6px -6px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+.PhotoGrid__imageGridItem___hFxCm:hover .PhotoGrid__imageWrapper___1YTK9{
+    background-position: right;
+}
+
+.PhotoGrid__imageGridItem___hFxCm a {
+    display: none;
+    font-size: 100%;
+    color: #ffffff !important;
+    text-align: center;
+    margin: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    height: 50px;
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.PhotoGrid__imageGridItem___hFxCm:hover a, .PhotoGrid__imageGridItem___hFxCm:focus a {
+    display: block;
+}
+
+.PhotoGrid__imageGridItem___hFxCm:hover .PhotoGrid__imageWrapper___1YTK9:before, .PhotoGrid__imageGridItem___hFxCm:focus .PhotoGrid__imageWrapper___1YTK9:before {
+    display: block;
+}
+
+.PhotoGrid__imageWrapper___1YTK9:before {
+    content: "";
+    display: none;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgba(29, 38, 41, 0.65);
+}
+.PhotoGrid__column1___3xTvr {
+    width: 100%;
+    transition: all .5s linear;
+}
+.PhotoGrid__column1Image___2KDMR {
+    float:left;
+    width:30%;
+    margin-right: 10px;
+    padding-bottom: 30%;
+    transition: all .5s linear;
+}
+
+
+.PhotoGrid__lightbox___2hnqF {
+    /** Default lightbox to hidden */
+    /*display: block;*/
+    opacity: 1;
+    /** Position and style */
+    position: fixed;
+    z-index: 999;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    top: 0;
+    left: 0;
+    background: rgba(0,0,0,0.88);
+    visibility: visible;
+    /*transition: visibility .3s, opacity .3s linear;*/
+    transition: all .5s ;
+}
+
+.PhotoGrid__lightbox___2hnqF img {
+    /** Pad the lightbox image */
+    max-width: 100%;
+    max-height: 100%;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    margin-right: -50%;
+    transform: translate(-50%, -50%);
+    box-shadow:0 1px 4px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+    /*padding: 10px;*/
+    -webkit-transition: opacity 1s ease-in-out;
+    -moz-transition: opacity 1s ease-in-out;
+    -o-transition: opacity 1s ease-in-out;
+    transition: opacity 1s ease-in-out;
+    opacity:0;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+    filter: alpha(opacity=0);
+    pointer-events:none;
+
+}
+
+.PhotoGrid__lightbox___2hnqF img.opaque {
+    opacity:1;
+    -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: alpha(opacity=1);
+    pointer-events: auto;
+
+}
+
+.PhotoGrid__hide___3-4dl {
+     /*display:none;*/
+     opacity: 0;
+    visibility: hidden;
+    transition: visibility .3s, opacity .3s linear;
+    /*transition: all .5s;*/
+
+}
+h1 small {
+    font-size:65%;
+    color:#777;
+    font-weight: 400;
+}
