--- a/static/styles.css
+++ b/static/styles.css
@@ -180,7 +180,7 @@ body {
     opacity:1;
     -ms-filter:"progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
     filter: alpha(opacity=1);
-    pointer-events: ;
+    pointer-events: auto;
 
 }
 
